# icebreaker-litex-fgen

./: README.md
rust/fgen/: Cargo.toml
rust/fgen/src/: fgen.rs  leds.rs  main.rs  print.rs
rust/litex-pac/: Cargo.toml  build.rs  iCEBESOC.svd
soc/: icebreaker.py
soc/rtl/: functiongenerator.py
soc/verilog/: DA2FunctionGenerator.v
